--- a/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
@@ -7,7 +7,7 @@
 				"topic": "Digital Social Care Records (DSCRs)",
 				"metrics": [
 					{
-						"id": "",
+						"id": "add later",
 						"full_name": "care quality commisions(CQC) active location monthly updated data",
 						"short_name": "Care directory wih filters monthly update"
 					}
