--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
     cp -r $(Build.Repository.LocalPath)/orchestration/ $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/functions/ $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/tables/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/validation/ $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/config/ $(Build.BinariesDirectory)
     
 - task: ArchiveFiles@2
