--- a/config/pipelines/nhsx-au-analytics/config_digitalrecords_socialcare_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_digitalrecords_socialcare_dbrks.json
@@ -42,6 +42,12 @@
 		"staging": {
 					"metric":"socialcare_digitalrecord_month_count_prop",
 					"sink_table":"socialcare_digitalrecord_month_count_prop"
+		},
+		"validation": [
+			{
+				"initial_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_trigger_socialcare_digitalrecord/dbrks_trigger_socialcare_digitalrecord_validation",
+				"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
 		}
+		]
 	}
 }
