updated dscr config

--- a/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
@@ -44,6 +44,12 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dscr_all_variables_month_count/",
 					"sink_file": "dscr_all_variables_month_count.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_month_count"
+				},
+				{
+					"metric": "dbrks_dscr_all_variables_collated_count",
+					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dbrks_dscr_all_variables_collated_count/",
+					"sink_file": "dbrks_dscr_all_variables_collated_count.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_collated_count"
 				}
 			]
 		},
@@ -51,6 +57,10 @@
 			{
 				"metric": "dscr_all_variables_month_count",
 				"sink_table": "dscr_all_variables_month_count"
+			},
+			{
+				"metric": "dbrks_dscr_all_variables_collated_count",
+				"sink_table": "dbrks_dscr_all_variables_collated_count"
 			}
 		],
 		"validation": [
