--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
@@ -235,6 +235,9 @@
 				},
 				{
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/tables/nhs_app/nhs_app_uptake"
+				},
+				{
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/tables/nhs_app/nhs_app_usage"
 				}
 			]
 		},
