--- a/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_dscr_dbrks.json
@@ -25,6 +25,11 @@
 						"id": "M326",
 						"full_name": "Location DSCRQ completeness (PIR collated - Tab02 in Databricks)",
 						"short_name": "Location DSCRQ completeness (PIR collated - Tab02 in Databricks)"
+					},
+                    {
+						"id": "M334",
+						"full_name": "Number of care home beds (approximation of individuals receiving care in Care homes) covered by each DSCR status [Yes/No/NA] ",
+						"short_name": "Number of care home beds approximating individuals receiving care in Care homes"
 					}
 				]
 			}
@@ -65,6 +70,12 @@
 					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dbrks_dscr_all_variables_collated_count/",
 					"sink_file": "dbrks_dscr_all_variables_collated_count.csv",
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_collated_count"
+				},
+                {
+					"metric": "dbrks_dscr_all_variables_care_home_beds",
+					"sink_path": "proc/projects/nhsx_slt_analytics/digital_socialcare/dscr/dbrks_dscr_all_variables_care_home_beds/",
+					"sink_file": "dbrks_dscr_all_variables_care_home_beds.csv",
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dscr/dbrks_dscr_all_variables_care_home_beds"
 				}
 			]
 		},
@@ -76,6 +87,10 @@
 			{
 				"metric": "dbrks_dscr_all_variables_collated_count",
 				"sink_table": "dbrks_dscr_all_variables_collated_count"
+			},
+            {
+				"metric": "dbrks_dscr_all_variables_care_home_beds",
+				"sink_table": "dbrks_dscr_all_variables_care_home_beds"
 			}
 		],
 		"validation": [
