--- a/config/pipelines/nhsx-au-analytics/config_dspt_socialcare_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_dspt_socialcare_dbrks.json
@@ -10,7 +10,12 @@
             "id": "M011_M012",
             "full_name": "Number and percent of adult social care organisations that meet or exceed the DSPT standard",
 			"short_name":"dspt_care_standards_year_count_prop"
-        	}
+        	},
+		{
+			"id": "M394B",
+			"full_name": "Number of social care provider that meet DSPT compliance by ICB",
+			"short_name":"dspt_socialcare_standards_compliance_by_ICB"	
+		}
 		]
 	}]},
 	"pipeline": {
@@ -35,11 +40,37 @@
 			"source_file": "socialcare_dspt_results_full.parquet",
 			"sink_path": "proc/projects/nhsx_slt_analytics/cybersecurity/dspt_care/standards_year_count_prop/",
 			"sink_file": "dspt_care_standards_year_count_prop.csv",
-			"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dspt_socialcare/dbrks_cybersecurity_dspt_care_standards_year_count_prop"
+			"databricks_notebook": "/databricks/au-azure-databricks-cicd/orchestration/dbrks_dspt_socialcare_orchestrator",
+			"databricks":[    
+    			{
+				"metric": "dspt_care_standards_year_count_prop",
+				"sink_path": "proc/projects/nhsx_slt_analytics/cybersecurity/dspt_care/standards_year_count_prop/",
+				"sink_file": "dspt_care_standards_year_count_prop.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dspt_socialcare/dbrks_cybersecurity_dspt_care_standards_year_count_prop"
+				},    
+    			{
+				"metric": "dspt_socialcare_standards_compliance_by_ICB",
+				"sink_path": "proc/projects/nhsx_slt_analytics/cybersecurity/dspt_care/socialcare_standards_count_by_ICB/",
+				"sink_file": "dspt_socialcare_standards_compliance_by_ICB.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_dspt_socialcare/dbrks_dspt_socialcare_standards_compliance_by_ICB"
+				}
+					
+			]
+		
 		},
-		"staging": {
-					"metric":"dspt_care_standards_year_count_prop",
-					"sink_table":"dspt_care_standards_year_count_prop"
-		}
+		"staging": [
+			{
+				"metric":"dspt_care_standards_year_count_prop",
+				"sink_table":"dspt_care_standards_year_count_prop"
+		   },
+		   {
+			       "metric":"dspt_socialcare_standards_compliance_by_ICB",
+			       "sink_table":"dspt_socialcare_standards_compliance_by_ICB"
+		    }
+		    
+
+        ]
+		
+		
 	}
 }
