Added notebooks for dscr finance tracker

--- a/config/pipelines/direct-load/config_dscr_finance_tracker.json
+++ b/config/pipelines/direct-load/config_dscr_finance_tracker.json
@@ -31,7 +31,7 @@
 		"staging": [	
 			{
 				"metric": "finance_tracker",
-				"sink_table": "finance_tracker"
+				"sink_table": "dscr_finance_tracker"
 			}
            
 		],
