updated finance tracker config

--- a/config/pipelines/direct-load/config_dscr_finance_tracker.json
+++ b/config/pipelines/direct-load/config_dscr_finance_tracker.json
@@ -38,7 +38,7 @@
 		"validation": [
 			{
 				"initial_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_dscr_validation/dbrks_dscr_finance_tracker_file_validation",
-				"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table.py"
+				"final_validation": "/databricks/au-azure-databricks-cicd/validation/dbrks_count_rows_in_table"
 		}
 		]
 	}
