--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
@@ -238,6 +238,9 @@
 				},
 				{
 					"databricks_notebook": "/databricks/au-azure-databricks-cicd/tables/nhs_app/nhs_app_usage"
+				},
+				{
+					"databricks_notebook": "/databricks/au-azure-databricks-cicd/tables/nhs_app/nhs_app_dct"
 				}
 			]
 		},
